Fix weird spacing between post header and menu regarding post content.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,7 +256,6 @@ footer {
 .post-content {
     flex: 3;
     
-    margin-top: 1rem;
     padding: 1rem;
 
     word-wrap: break-word;
@@ -297,11 +296,15 @@ footer {
     flex-direction: column;
 
     text-decoration: none;
+
+    padding: 0 1rem;
 }
 .post-menu ul {
     top: 0;
     position: sticky;
     list-style: none;
+
+    padding: 0;
 }
 .post-menu ul li a {
     color: dodgerblue;
